WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95342
[WK2][EFL] Fix compile warnings when enable tiled backing store
https://bugs.webkit.org/show_bug.cgi?id=95342
Summary
[WK2][EFL] Fix compile warnings when enable tiled backing store
Kangil Han
Reported
2012-08-29 06:50:05 PDT
Source/WebKit2/UIProcess/API/efl/EflViewportHandler.h:44:70: error: ‘class WebKit::PageClientImpl’ has no member named ‘page’ Source/WebKit2/UIProcess/API/efl/EflViewportHandler.cpp:64:23: error: ‘class WebKit::PageClientImpl’ has no member named ‘page’
Attachments
patch
(5.07 KB, patch)
2012-08-30 20:07 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
patch
(4.04 KB, patch)
2012-09-11 01:54 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
patch
(4.11 KB, patch)
2012-09-11 02:20 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kangil Han
Comment 1
2012-08-29 18:14:12 PDT
(In reply to
comment #0
)
> Source/WebKit2/UIProcess/API/efl/EflViewportHandler.h:44:70: error: ‘class WebKit::PageClientImpl’ has no member named ‘page’ > Source/WebKit2/UIProcess/API/efl/EflViewportHandler.cpp:64:23: error: ‘class WebKit::PageClientImpl’ has no member named ‘page’
BUG 95408
will fix these compile errors.
Kangil Han
Comment 2
2012-08-30 20:07:56 PDT
Created
attachment 161611
[details]
patch
Gyuyoung Kim
Comment 3
2012-08-31 01:22:08 PDT
Comment on
attachment 161611
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161611&action=review
BTW,
> Source/WebKit2/CMakeLists.txt:576 > +IF (WTF_USE_3D_GRAPHICS)
CMakeLists.txt will may be used by other ports. So, I'm not sure if we can add this patch to CMakeList.txt. I think it would be good to move this to PlatformEfl.cmake for EFL port only.
> Source/WebKit2/ChangeLog:10 > + * CMakeLists.txt: fatal error: ShaderLang.h: No such file or directory
I think you have to mention what is modified in this file, not just build error.
Kangil Han
Comment 4
2012-08-31 02:56:37 PDT
BUG 95173
attempts to include ANGLE directory. I will rebase my patch after
BUG 95173
landing.
Gyuyoung Kim
Comment 5
2012-08-31 03:05:46 PDT
Comment on
attachment 161611
[details]
patch Ok, I clear r? and cq? from
attachment 161611
[details]
so that this bug does not appear in
http://webkit.org/pending-review
.
Kangil Han
Comment 6
2012-08-31 04:51:45 PDT
(In reply to
comment #5
)
> (From update of
attachment 161611
[details]
) > Ok, I clear r? and cq? from
attachment 161611
[details]
[details] so that this bug does not appear in
http://webkit.org/pending-review
.
Thanks, I forgot asking it. :-)
Raphael Kubo da Costa (:rakuco)
Comment 7
2012-09-11 01:13:16 PDT
Anything else that needs to be fixed before closing this bug?
Kangil Han
Comment 8
2012-09-11 01:23:33 PDT
(In reply to
comment #7
)
> Anything else that needs to be fixed before closing this bug?
AFAIK, I have to do little more things. I am checking on this. :-)
Kangil Han
Comment 9
2012-09-11 01:54:12 PDT
Created
attachment 163304
[details]
patch
Gyuyoung Kim
Comment 10
2012-09-11 02:06:53 PDT
Comment on
attachment 163304
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=163304&action=review
> Source/WebKit2/ChangeLog:11 > + (ewk_view_accelerated_compositing_mode_enter):NULL used in arithmetic [-Wpointer-arith]
Just warning message looks not so good. Please write this error more clear.
Kangil Han
Comment 11
2012-09-11 02:20:23 PDT
Created
attachment 163309
[details]
patch Done!
WebKit Review Bot
Comment 12
2012-09-11 03:06:35 PDT
Comment on
attachment 163309
[details]
patch Clearing flags on attachment: 163309 Committed
r128163
: <
http://trac.webkit.org/changeset/128163
>
WebKit Review Bot
Comment 13
2012-09-11 03:06:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug