[WK2][EFL] Fix compile warnings when enable tiled backing store https://bugs.webkit.org/show_bug.cgi?id=95342

Patch by Kangil Han <kangil.han@samsung.com> on 2012-09-11
Reviewed by Gyuyoung Kim.

Fixed compile time warning messages when enable tiled backing store.

* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_accelerated_compositing_mode_enter): Fixed invalid use of 'EINA_SAFETY_ON_NULL_RETURN_VAL' since it used '!' ahead of evasGl value so it is always null.
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::setChildren): Replaced 'int' i with 'unsigned' because its comparing value is 'size_t'.
* WebProcess/WebPage/CoordinatedGraphics/LayerTreeCoordinator.cpp:
(WebKit::LayerTreeCoordinator::renderNextFrame): Replaced 'int' i with 'unsigned' because its comparing value is 'size_t'.
(WebKit::LayerTreeCoordinator::beginContentUpdate): Replaced 'int' i with 'unsigned' because its comparing value is 'size_t'.

Canonical link: https://commits.webkit.org/114256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128163 268f45cc-cd09-0410-ab3c-d52691b4dbfc